<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_24"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_litar_pokemon"
            android:icon="@drawable/list_bulleted_24"
            android:title="@string/menu_listar_pokemon" />

        <item
            android:id="@+id/nav_jogar"
            android:icon="@drawable/videogame_24"
            android:title="@string/menu_jogar" />

        <item
            android:id="@+id/nav_admin"
            android:icon="@drawable/settings_24"
            android:title="@string/menu_admin" />
    </group>
</menu>