<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.renatocouto_avaliacaobimestral_parte_2.ui.home.HomeFragment"
        android:label="@string/titulo_App"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_litar_pokemon"
        android:name="com.example.renatocouto_avaliacaobimestral_parte_2.ui.listarpokemon.ListarPokemonFragment"
        android:label="@string/menu_listar_pokemon"
        tools:layout="@layout/fragment_pokemon_listar" />
    <fragment
        android:id="@+id/nav_jogar"
        android:name="com.example.renatocouto_avaliacaobimestral_parte_2.ui.usuario.UsuarioFragment"
        android:label="@string/jogar"
        tools:layout="@layout/fragment_usuario" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.renatocouto_avaliacaobimestral_parte_2.ui.paineladmin.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_jogoFragment"
        android:name="com.example.renatocouto_avaliacaobimestral_parte_2.ui.jogo.JogoFragment"
        android:label="JogoFragment"
        tools:layout="@layout/fragment_jogo"
        />


</navigation>