<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".ui.paineladmin.AdminFragment">

    <!-- Botões -->
    <LinearLayout
        android:id="@+id/linear_layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="70dp"
        android:orientation="vertical"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linear_layout_btn_linha1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_baixar"
                style="?android:attr/button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue"
                android:contentDescription="@string/atualizar_lista_de_pokemon"
                android:text="@string/baixar_api" />
            <Button
                android:id="@+id/button_listar_banco"
                style="?android:attr/button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue"
                android:contentDescription="@string/atualizar_lista_de_pokemon"
                android:text="@string/listar_banco" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_btn_linha2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_limpar"
                style="?android:attr/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:backgroundTint="@color/coral"
                android:contentDescription="@string/limpar_banco_de_dados"
                android:text="@string/limpar_banco" />

            <Button
                android:id="@+id/button_salvar"
                style="?android:attr/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:backgroundTint="@color/green"
                android:contentDescription="@string/salvar_pokemon"
                android:text="@string/salvar" />

        </LinearLayout>

    </LinearLayout>

    <!-- Lista de Pokémons -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_pokemons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:clipToPadding="false"
        android:paddingVertical="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_button" />

    <!-- quando estiver vazio -->
    <TextView
        android:id="@+id/tv_empty_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nenhum_pokemon_encontrado"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_button" />

    <!-- Container de carregamento -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loading_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progress_circular"
            style="@android:style/Widget.ProgressBar.Small"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/carregando_dados"
            android:indeterminateTint="@color/coral"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_carregando"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/carregando"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progress_circular" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>