<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.usuario.UsuarioFragment">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_layout_nome"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="digite seu nome">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_layout_numero"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="numero: min 2 max 50">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_numero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >
            <Button
                android:id="@+id/button_gabarito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="3dp"
                style="?android:attr/button"
                android:backgroundTint="@color/green"
                android:contentDescription="@string/personagens"
                android:text="@string/gabarito" />
            <Button
                android:id="@+id/button_jogar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                style="?android:attr/button"
                android:backgroundTint="@color/green"
                android:contentDescription="@string/inicia_o_jogo"
                android:text="@string/jogar" />
        </LinearLayout>



        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_lista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clipToPadding="false"
            android:paddingVertical="8dp"
            />

    </LinearLayout>


</FrameLayout>